--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
         </section>
 
-        <section class="section-rates">
+        <section class="section-rates _anim-items">
           <div class="section-rates-wrapper">
             <div class="section-rates-text">
               <div class="section-rates-title">
@@ -727,6 +727,7 @@
   <script type="text/javascript" src="js/hover.js"></script>
   <script type="text/javascript" src="js/spoller.js"></script>
   <script type="text/javascript" src="js/header-burger.js"></script>
+  <script type="text/javascript" src="js/animation-scroll.js"></script>
   <script src="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.js"></script>
   <script type="text/javascript" src="js/swiper.js"></script>
   </body>
