--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="wrapper">
       <header>
         <div class="header-wrapper">
-          <div class="header-menu">
+          <div class="header-menu _anim-items  _anim-no-hide">
             <div class="header-menu-img">
               <img src="img/logo.svg" alt="logo">
               </div>
@@ -37,7 +37,7 @@
 
             </div>
 
-            <div class="header-basket">
+            <div class="header-basket _anim-items _anim-no-hide">
               <div class="header-basket-item header-basket-item1">
                 <button class="header-basket-button1"><img src="img/basket.svg" alt="basket"></button>
               </div>
@@ -63,7 +63,7 @@
       <section class="section-home _anim-items2">
         <div class="section-home-wrapper">
           <div class="section-home-text2">
-          <div class="section-home-text">
+          <div class="section-home-text _anim-items  _anim-no-hide">
             <div class="section-home-title1">
               <div>Made in Britain</div>
               </div>
@@ -72,12 +72,12 @@
                 <h1>A game changer in<br>the ethical fight against Covid-19</h1>
                 </div>
 
-                <div class="section-home-description">
+                <div class="section-home-description  _anim-items  _anim-no-hide">
                   <div>Textiles are one of the main vectors for viruses and bacteria. Textiles treat with HeiQ viroblock help stop cross-
                     contamination from surface to face covering.</div>
                   </div>
 
-                  <div class="section-home-button-wrapper">
+                  <div class="section-home-button-wrapper  _anim-items  _anim-no-hide">
                     <a href="index.html" class="section-home-button1"><div>Shop Now</div></a>
                     <a href="index.html" class="section-home-button2"><div>Learn More</div></a>
                     </div>
@@ -85,25 +85,25 @@
             </div>
 
             <div class="icons-wrapper">
-              <a class="icons-wrapper-item icons-wrapper-item1" href="index.html">
+              <a class="icons-wrapper-item icons-wrapper-item1  _anim-items  _anim-no-hide" href="index.html">
                 <img src="img/icon1.svg" alt="icon1" id="icon1">
               </a>
 
-              <a class="icons-wrapper-item icons-wrapper-item2" href="index.html">
+              <a class="icons-wrapper-item icons-wrapper-item2  _anim-items  _anim-no-hide" href="index.html">
                 <img src="img/icon2.svg" alt="icon2" id="icon2">
               </a>
 
-              <a class="icons-wrapper-item icons-wrapper-item3" href="index.html">
+              <a class="icons-wrapper-item icons-wrapper-item3  _anim-items  _anim-no-hide" href="index.html">
                 <img src="img/icon3.svg" alt="icon3" id="icon3">
               </a>
 
-              <a class="icons-wrapper-item icons-wrapper-item4" href="index.html">
+              <a class="icons-wrapper-item icons-wrapper-item4  _anim-items  _anim-no-hide" href="index.html">
                 <img src="img/icon4.svg" alt="icon4" id="icon4">
               </a>
             </div>
           </div>
 
-            <div class="section-home-img">
+            <div class="section-home-img _anim-items  _anim-no-hide">
               <img src="img/img1.png" alt="img1">
               </div>
           </div>
@@ -128,20 +128,20 @@
 
         </section>
 
-        <section class="section-rates _anim-items">
+        <section class="section-rates">
           <div class="section-rates-wrapper">
             <div class="section-rates-text">
-              <div class="section-rates-title">
+              <div class="section-rates-title  _anim-items  _anim-no-hide">
                 <h2>The Unique properties of our 1TCA mask</h2>
               </div>
 
-              <div class="section-rates-description">
+              <div class="section-rates-description  _anim-items  _anim-no-hide">
                 <div>British public is required to wear a face mask when on trains,
                   in shops and any enclosed space, 1TcA has launched the first.</div>
             </div>
           </div>
 
-          <div class="section-rates-main">
+          <div class="section-rates-main _anim-items _anim-no-hide">
 
             <div class="section-rates-main-block section-rates-main-block1">
               <div class="section-rates-main-img section-rates-main-img1">
@@ -209,11 +209,11 @@
 
         <section class="section-information">
           <div class="section-information-wrapper">
-            <div class="section-information-img">
+            <div class="section-information-img _anim-items _anim-no-hide">
               <img src="img/img16.png" alt="img16" class="img16">
             </div>
 
-            <div class="section-information-text">
+            <div class="section-information-text _anim-items _anim-no-hide">
               <div class="section-information-title1">
                 <div>Enhanced with HeiQ Viroblock</div>
               </div>
@@ -240,57 +240,57 @@
         <section class="section-project">
           <div class="section-project-wrapper">
             <div class="section-project-item section-project-item1">
-              <div class="section-project-img">
+              <div class="section-project-img  _anim-items _anim-no-hide">
                 <img src="img/img6.svg" alt="img6">
               </div>
 
-              <div class="section-project-title">
+              <div class="section-project-title   _anim-items _anim-no-hide">
                 <div>Protect your family</div>
               </div>
 
-              <div class="section-project-description">
+              <div class="section-project-description   _anim-items _anim-no-hide">
                 <div>Purchase our family packs of masks online</div>
               </div>
 
-              <a class="section-project-button section-project-button1" href="index.html">
+              <a class="section-project-button section-project-button1 _anim-items _anim-no-hide" href="index.html">
                 <div>Shop Now</div>
               </a>
 
             </div>
 
             <div class="section-project-item section-project-item2">
-              <div class="section-project-img">
+              <div class="section-project-img  _anim-items _anim-no-hide">
                 <img src="img/img7.svg" alt="img7">
               </div>
 
-              <div class="section-project-title">
+              <div class="section-project-title   _anim-items _anim-no-hide">
                 <div>Protect your family</div>
               </div>
 
-              <div class="section-project-description">
+              <div class="section-project-description   _anim-items _anim-no-hide">
                 <div>Purchase our family packs of masks online</div>
               </div>
 
-              <a class="section-project-button section-project-button2" href="index.html">
+              <a class="section-project-button section-project-button2  _anim-items _anim-no-hide" href="index.html">
                 <div>Shop Now</div>
               </a>
 
             </div>
 
             <div class="section-project-item section-project-item3">
-              <div class="section-project-img">
+              <div class="section-project-img  _anim-items _anim-no-hide">
                 <img src="img/img8.svg" alt="img8">
               </div>
 
-              <div class="section-project-title">
+              <div class="section-project-title   _anim-items _anim-no-hide">
                 <div>Protect your family</div>
               </div>
 
-              <div class="section-project-description">
+              <div class="section-project-description   _anim-items _anim-no-hide">
                 <div>Purchase our family packs of masks online</div>
               </div>
 
-              <a class="section-project-button section-project-button3" href="index.html">
+              <a class="section-project-button section-project-button3 _anim-items _anim-no-hide" href="index.html">
                 <div>Shop Now</div>
               </a>
 
@@ -300,7 +300,7 @@
 
         <section class="section-reasons">
           <div class="section-reasons-wrapper">
-            <div class="section-reasons-item section-reasons-item1">
+            <div class="section-reasons-item section-reasons-item1  _anim-items _anim-no-hide">
               <div class="section-reasons-title">
                 <div>5 Reasons to use 1TcA Masks</div>
               </div>
@@ -314,7 +314,7 @@
             </div>
           </div>
 
-            <div class="section-reasons-item section-reasons-item2">
+            <div class="section-reasons-item section-reasons-item2  _anim-items _anim-no-hide">
               <img src="img/img17.png" alt="img17" class="img17">
             </div>
           </div>
